--- a/pl-calendar.css
+++ b/pl-calendar.css
@@ -7,10 +7,19 @@
 }
 
 .calendar-head {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
 }
 
 .calendar-close {
@@ -26,8 +35,13 @@
 }
 
 .month-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   width: 72%;
 }
 
@@ -55,9 +69,16 @@
 .calendar-daynames {
 	width: 100%;
 	margin: 0.4%;
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
-   flex-direction: row;
-   justify-content: left;
+   -webkit-box-orient: horizontal;
+   -webkit-box-direction: normal;
+       -ms-flex-direction: row;
+           flex-direction: row;
+   -webkit-box-pack: left;
+       -ms-flex-pack: left;
+           justify-content: left;
 }
 
 .calendar-daynames .dayname {
@@ -73,11 +94,20 @@
   width: 100%;
   height: 73%;
   margin: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: left;
-  align-content: flex-start;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: left;
+      -ms-flex-pack: left;
+          justify-content: left;
+  -ms-flex-line-pack: start;
+      align-content: flex-start;
 }
 
 .calendar-days .day-item {
@@ -98,4 +128,3 @@
 	background-color: #ffffcc;
 	cursor: default;
 }
-
