--- a/playlist2.css
+++ b/playlist2.css
@@ -5,6 +5,14 @@ html, body {
   margin: 0;
 }
 
+html {
+	min-height: 100%;
+}
+
+body {
+	height: 100%;
+}
+
 .main-block {
 	margin: 0 auto;
 	background-color: #333333;
@@ -19,7 +27,7 @@ html, body {
 	left: 0;
 	top: 0;
 	width: 100%;
-	height: 100%;
+	min-height: 100%;
 	font-size: 30px;
 	padding-top: 50px;
 	color: #dddddd;
@@ -27,6 +35,7 @@ html, body {
 
 .pl-dragover:before {
 	content: "Drop playlist file to upload";
+	position: fixed;
 }
 
 .header-title {
