--- a/playlist2.css
+++ b/playlist2.css
@@ -119,7 +119,6 @@ body {
 	.main-menu {
 		width: 19vw;
 		max-width: 225px;
-		font-size: 1.6vw;
 	}
 	
 	.main-menu:before {
@@ -137,7 +136,26 @@ body {
 		height: 50px;
 		margin: 5px 5px 5px 0;
 		line-height: 50px;
+	}
+}
+
+@media screen and (min-width: 800px) and (max-width:1470px) {
+	.main-menu {
+		font-size: 1.6vw;
+	}
+	
+	.lm-item {
 		font-size: 1.7vw;
+	}
+}
+
+@media screen and (min-width:1470px) {
+	.main-menu {
+		font-size: 24px;
+	}
+	
+	.lm-item {
+		font-size: 25px;
 	}
 }
 
@@ -408,8 +426,6 @@ input#pl_date, select#pl_year {
 }
 
 .item-info {
-    width: 60px;
-	margin: 0 5px;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -424,39 +440,120 @@ input#pl_date, select#pl_year {
 	    -ms-flex-align: center;
 	        align-items: center;
 	background-color: #181818;
-	font-size: 36px;
 }
 
 .item-info.top100 {
-	font-size: 21px;
 	color: #cccccc;
 	font-weight: bold;
 }
 
 .item-info.total {
-	font-size: 16px;
 	width: 90px;
 	color: #cccccc;
 	font-weight: normal;
+}
+
+@media screen and (min-width: 800px) {
+	.item-main {
+		padding: 7px;
+	}
+	
+	.item-info {
+		width: 60px;
+		height: 60px;
+		margin: 0 5px;
+		font-size: 36px;
+	}
+	
+	.item-info.top100 {
+		font-size: 21px;
+	}
+	
+	.item-info.total {
+		font-size: 16px;
+	}
+	
+	.artist {
+		font-size: 20px;
+	}
+	
+	.song {
+		font-size: 16px;
+	}	
+}
+
+@media screen and (max-width: 800px) and (orientation: landscape) {
+	.item-main {
+		padding: 1vw;
+	}
+	
+	.item-info {
+		width: 9vw;
+		height: 9vw;
+		margin: 0 0.75vw;
+		font-size: 5.4vw;
+	}
+	
+	.item-info.top100 {
+		font-size: 3.15vw;
+	}
+	
+	.item-info.total {
+        font-size: 2.4vw;			
+	}
+	
+	.artist {
+		font-size: 3vw;
+	}
+	
+	.song {
+		font-size: 2.4vw;
+	}
+}
+
+@media screen and (max-width: 800px) and (orientation: portrait) {
+	.item-main {
+		padding: 1.56vw;
+	}
+	
+	.item-info {
+		width: 14vw;
+		height: 14vw;
+		margin: 0 1.17vw;
+		font-size: 8.4vw;
+	}
+	
+	.item-info.top100 {
+		font-size: 4.9vw;
+	}
+	
+	.item-info.total {
+		font-size: 3.73vw;
+	}
+	
+	.artist {
+		font-size: 4.67vw;
+	}
+	
+	.song {
+		font-size: 3.73vw;
+	}
 }
 
 .item-main {
 	width:100%;
 	background-color: #181818;
     text-align:left;
-    padding: 4px 7px 7px 7px;
     margin-right: 5px;
 }
 
 .artist {
   font-weight: bold;
-  font-size: 20px;
   color: #cccccc;
   /*margin: 7px 0 0 7px;*/
 }
 
 .song {
-  font-size: 16px;
   color: #16EE47;
   /*margin: 0 0 7px 7px;*/
   font-weight: normal;
