--- a/playlist2.css
+++ b/playlist2.css
@@ -508,11 +508,11 @@ input#pl_date, select#pl_year {
 	}
 	
 	.artist {
-		font-size: 20px;
+		font-size: 16px;
 	}
 	
 	.song {
-		font-size: 16px;
+		font-size: 20px;
 	}	
 }
 
@@ -540,11 +540,11 @@ input#pl_date, select#pl_year {
 	}
 	
 	.artist {
-		font-size: 3vw;
+		font-size: 2.4vw;
 	}
 	
 	.song {
-		font-size: 2.4vw;
+		font-size: 3vw;
 	}
 }
 
@@ -572,11 +572,11 @@ input#pl_date, select#pl_year {
 	}
 	
 	.artist {
-		font-size: 4.67vw;
+		font-size: 3.73vw;
 	}
 	
 	.song {
-		font-size: 3.73vw;
+		font-size: 4.67vw;
 	}
 }
 
@@ -587,7 +587,7 @@ input#pl_date, select#pl_year {
 }
 
 .artist {
-  font-weight: bold;
+  font-weight: normal;
   color: #cccccc;
   /*margin: 7px 0 0 7px;*/
 }
