--- a/playlist2.css
+++ b/playlist2.css
@@ -395,7 +395,7 @@ body {
 	display: flex;
 }
 
-input#pl_date, #pl_year .dropdown-toggle {
+input.vdatetime-input, #pl_year .dropdown-toggle {
 	background-color: #313131;
 	color: #bbbbbb;
 	border: 0;
@@ -411,7 +411,7 @@ input#pl_date, #pl_year .dropdown-toggle {
 }
 
 @media screen and (max-width: 800px) and (orientation: landscape) {
-	input#pl_date, #pl_year .dropdown-toggle {
+	input.vdatetime-input, #pl_year .dropdown-toggle {
 		width: 36vw;
 		height: 9vw;
 		font-size: 5vw;
@@ -420,7 +420,7 @@ input#pl_date, #pl_year .dropdown-toggle {
 }
 
 @media screen and (max-width: 800px) and (orientation: portrait) {
-	input#pl_date, #pl_year .dropdown-toggle {
+	input.vdatetime-input, #pl_year .dropdown-toggle {
 		width: 45vw;
 		height: 14vw;
 		font-size: 7vw;
@@ -434,7 +434,7 @@ input#pl_date, #pl_year .dropdown-toggle {
 		max-width: 800px;
 	}
 	
-	input#pl_date, #pl_year .dropdown-toggle {
+	input.vdatetime-input, #pl_year .dropdown-toggle {
 		width: 270px;
 		height: 50px;
 		font-size: 26px;
