fix styles for calendar and add font-face

--- a/playlist2.css
+++ b/playlist2.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Verdana';
+  src: url('fonts/verdana/verdana.ttf')  format('truetype');
+}
+
 html, body {
   background-color: #cccccc;
   font-family: "Verdana";
@@ -270,7 +275,7 @@ body {
 	}
 }
 
-.pl-calendar, .pl-upload, .pl-download, .pl-new, .pl-up, .pl-down, .pl-prev, .pl-next {
+ .pl-upload, .pl-download, .pl-new, .pl-up, .pl-down, .pl-prev, .pl-next {
 		background-repeat: no-repeat;
 	}
 
@@ -285,21 +290,21 @@ body {
 }
 	
 @media screen and (min-width: 800px) {
-	.pl-calendar, .pl-upload, .pl-download, .pl-prev, .pl-next {
+	 .pl-upload, .pl-download, .pl-prev, .pl-next {
 		background-size: 40px 40px;
 		background-position: 5px 5px;
 	}
 }
 
 @media screen and (max-width: 800px) and (orientation: landscape) {
-	.pl-calendar, .pl-upload, .pl-download, .pl-prev, .pl-next {
+	 .pl-upload, .pl-download, .pl-prev, .pl-next {
 		background-size: 7vw 7vw;
 		background-position: 1vw 1vw;
 	}
 }
 
 @media screen and (max-width: 800px) and (orientation: portrait) {
-	.pl-calendar, .pl-upload, .pl-download, .pl-prev, .pl-next {
+	 .pl-upload, .pl-download, .pl-prev, .pl-next {
 		background-size: 10vw 10vw;
 		background-position: 2vw 2vw;
 	}
@@ -334,7 +339,7 @@ body {
 	background-color: #393939;
 }
 
-.main-menu, .pl-prev, .pl-next, .pl-calendar, .pl-upload, .pl-download {
+.main-menu, .pl-prev, .pl-next,  .pl-upload, .pl-download {
 	color: #bbbbbb;
 	margin-right: 7px;
 	display: -webkit-box;
@@ -350,7 +355,7 @@ body {
 }
 
 @media screen and (min-width: 800px) {
-	.pl-prev, .pl-next, .pl-calendar, .pl-upload, .pl-download {
+	.pl-prev, .pl-next,  .pl-upload, .pl-download {
 		width: 50px;
 		font-size: 30px;
 	}
@@ -369,7 +374,7 @@ body {
 
 @media screen and (max-width: 800px) and (orientation: landscape) {
 	
-	.main-menu, .pl-prev, .pl-next, .pl-calendar, .pl-upload, .pl-download {
+	.main-menu, .pl-prev, .pl-next,  .pl-upload, .pl-download {
 		width: 9vw;
 		height: 9vw;
 		font-size: 6vw;
@@ -378,7 +383,7 @@ body {
 
 @media screen and (max-width: 800px) and (orientation: portrait) {
 	
-	.main-menu, .pl-prev, .pl-next, .pl-calendar, .pl-upload, .pl-download {
+	.main-menu, .pl-prev, .pl-next,  .pl-upload, .pl-download {
 		width: 14vw;
 		height: 14vw;
 		font-size: 9vw;
@@ -415,8 +420,8 @@ input.pl_date, #pl_year .dropdown-toggle {
 	input.pl_date, #pl_year .dropdown-toggle {
 		width: 36vw;
 		height: 9vw;
-		font-size: 5vw;
-		padding: 2vw;
+		font-size: 18px;
+		padding: 1vw;
 	}
 }
 
@@ -424,8 +429,8 @@ input.pl_date, #pl_year .dropdown-toggle {
 	input.pl_date, #pl_year .dropdown-toggle {
 		width: 45vw;
 		height: 14vw;
-		font-size: 7vw;
-		padding: 3vw;
+		font-size: 18px;
+		padding: 1vw;
 	}
 }
 
