--- a/playlist2.css
+++ b/playlist2.css
@@ -341,7 +341,6 @@ body {
 
 .main-menu, .pl-prev, .pl-next,  .pl-upload, .pl-download {
 	color: #bbbbbb;
-	margin-right: 7px;
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -352,6 +351,14 @@ body {
 	-webkit-box-pack:center;
 	    -ms-flex-pack:center;
 	        justify-content:center;
+}
+
+.pl-prev {
+	margin-right: 8px;
+}
+
+.pl-next {
+	margin-left: 7px;
 }
 
 @media screen and (min-width: 800px) {
@@ -388,10 +395,6 @@ body {
 		height: 14vw;
 		font-size: 9vw;
 	}
-}
-
-.pl-upload, .pl-download {
-	margin: 0!important;
 }
 
 .date-block {
